--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.board{
+  width:100%;
+  height: 100vh;
+  background:linear-gradient(135deg,#7335bd,#e43ae7);
+  margin:0px auto;
+  padding: 50px;
+  border: 2px solid white;
+  border-radius: 20px;
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  
+  width:auto;
+  height:45px;
+  font-size: 18px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  /* margin-left: px; */
+  
 }
+button:hover{
+  zoom: 1.2;
+  transform: rotateX(20deg);
+  transition:step-end ;
+}
+.guestDetail{
+  width:700px;
+  height:450px;
+  background-color: white;
+  overflow-y: scroll;
+  color:black;
+  border-radius: 20px;
+  /* opacity: 0.8; */
+  padding:20px;
+  margin-right:2px;
+  box-sizing: border-box;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.buttonDiv{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  margin:5px;
+}
+span button{
+ 
+  margin-left: 5px;
+  height:40px;
+  width: auto;
+  padding: 10px;
+  box-sizing: border-box;
+  text-align: center;
+  cursor: pointer;
+}
+ tr td,tr th{
+  margin:50px;
+  padding: 8px;
+  /* border: 1px solid black; */
+  width:120px;
+  height:45px;
+  text-align: left;
+  box-sizing: border-box;
+}
+tr td:hover{
+  background-color: yellow;
+}
+h2{
+  display: flex;
+  justify-content: center;
+  /* border-bottom: 2px solid green; */
+  /* width:80%; */
+  text-decoration: underline;
 }
